ecmascript/parser/tests/typescript-errors/class/override-with-static/input.ts
class C extends B {
  static override t() {}
}
